fixes footer on mobile screen

--- a/styles/partials/_globals.scss
+++ b/styles/partials/_globals.scss
@@ -196,7 +196,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    gap: 1.6rem;
+
     @include tablet-breakpoint {
       flex-direction: row;
       justify-content: space-between;
@@ -229,7 +229,7 @@ body {
   }
   &__socials {
     display: flex;
-    gap: 1.6rem;
+    gap: 2.4rem;
     @include tablet-breakpoint {
       order: 2;
       gap: 2.4rem;
@@ -242,6 +242,9 @@ body {
   &__cols {
     display: flex;
     flex-direction: column;
+    gap: 1.6rem;
+    font-size: 1.3rem;
+    line-height: 1.8rem;
     @include tablet-breakpoint {
       font-size: 1.4rem;
       line-height: 2rem;
@@ -259,7 +262,12 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1.6rem;
-
+    &--1 {
+      margin-top: 2.4rem;
+      @include tablet-breakpoint {
+        margin-top: 0;
+      }
+    }
     @include tablet-breakpoint {
       gap: 2.4rem;
       flex-direction: column;
@@ -270,6 +278,7 @@ body {
     font-family: "Avenir Next Demi";
   }
   &__logo {
+    margin: 4.8rem 0 1.6rem;
     @include tablet-breakpoint {
       display: flex;
       align-items: center;
@@ -281,7 +290,7 @@ body {
     }
   }
   &__copy {
-    font-size: 1.4rem;
-    line-height: 2rem;
+    font-size: 1.3rem;
+    line-height: 1.8rem;
   }
 }
